--- a/app/globals.css
+++ b/app/globals.css
@@ -5,11 +5,19 @@ body {
 }
 
 body {
-  font-family: November, sans-serif;
+  font-family: November;
+}
+
+@font-face {
+  font-family: 'November';
+  src: url('/fonts/main-font.ttf') format('truetype');
+  font-style: normal;
+  font-display: swap;
 }
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  letter-spacing: 1px;
 }
