--- a/app/globals.css
+++ b/app/globals.css
@@ -5,11 +5,20 @@ body {
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Novem, Arial, Helvetica, sans-serif;
 }
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+/* Optional custom font for How To Play page */
+@font-face {
+  font-family: 'Novem';
+  src: url('/novem___.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
